src/objects/Test_Object__c.object
<CustomObject>
    <customHelpPage>Redirecting</customHelpPage>
    <fields>
        <fullName>Admin_test__c</fullName>
        <defaultValue>&quot;HP&quot;</defaultValue>
        <externalId>true</externalId>
        <label>Admin test</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Closedate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Test Objects</relationshipLabel>
        <relationshipName>Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>This is a region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dfgft__c</fullName>
        <label>dfgft</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>test122__c</fullName>
        <formula>ROUND( NOW() - CreatedDate ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test122</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <recordTypes>
        <fullName>FGS</fullName>
        <active>true</active>
        <label>FGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>GMS</fullName>
        <active>true</active>
        <label>GMS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>